# seginf

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
at1/: __init__.py  __main__.py  at1.md
at1/static/css/: pico.amber.css  pico.classless.amber.min.css  pico.classless.conditional.blue.css  pico.classless.conditional.cyan.css  pico.classless.conditional.fuchsia.css  pico.classless.conditional.green.min.css  pico.classless.conditional.grey.css  pico.classless.conditional.jade.css  pico.classless.conditional.jade.min.css  pico.classless.conditional.purple.css  pico.classless.conditional.purple.min.css  pico.classless.conditional.yellow.css  pico.classless.conditional.yellow.min.css  pico.classless.conditional.zinc.min.css  pico.classless.fuchsia.min.css  pico.classless.green.css  pico.classless.indigo.css  pico.classless.lime.min.css  pico.classless.pink.css  pico.classless.pumpkin.css  pico.classless.sand.css  pico.classless.slate.min.css  pico.classless.yellow.css  pico.conditional.blue.css  pico.conditional.fuchsia.css  pico.conditional.grey.min.css  (+46 more)
at1/templates/: erro.html  index.html  login.html  registro.html
at2/: Desenvolvimento de Sistema de Autenticação e Autorização com Banco de Dados.txt  __init__.py  __main__.py  at2.md
at2/templates/: admin.html  erro.html  index.html  login.html  perfil.html  registro.html  sucesso.html
at3/: Desenvolvimento de Sistema de Transferência Bancária com Login Simples.txt  __init__.py  __main__.py  at3.md
at3/templates/: base.html  erro.html  index.html  login.html  registro.html
(+158 files in other folders)
