[project]
name = "seginf"
version = "0.1.0"
description = "Exercícios de Segurança da Informação"
authors = [
    {name = "Gabriel Bitencourt", email = "gabrielbitercourt@gmail.com"},
]
dependencies = [
    "flask>=3.0.2",
    "passlib>=1.7.4",
    "pre-commit>=3.6.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
waitress = [
    "waitress>=3.0.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
at1 = "flask --debug -A at1 run"
at2 = "flask --debug -A at2 run"
at3 = "flask --debug -A at3 run"
export = "pdm export -o requirements.txt --prod --no-hashes"

[tool.pdm.dev-dependencies]
all = [
    "pyright>=1.1.350",
    "isort>=5.13.2",
    "ruff>=0.2.2",
]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.isort]
py_version = "312"
skip_gitignore = true
